# seren-skills

./: .gitignore  CONTRIBUTING.md  README.md
.github/: trading-skill-safety-waivers.json
family-office/: SKILL.md
family-office/_base/: README.md  pyproject.toml
family-office/_base/family_office_base/: __init__.py  audit_query.py  confidentiality.py  memory.py  schema_guard.py
family-office/_base/family_office_base/sql/: schema_guard.sql
family-office/_base/tests/: conftest.py  test_audit_query.py  test_confidentiality.py  test_memory.py  test_package.py  test_schema_guard.py
scripts/: build-index.mjs  validate_trading_skill_safety.py
tests/: test_alpaca_additive_migrations.py  test_alpaca_market_data_routes.py  test_alpaca_persistence_contract.py  test_api_key_setup_directive.py  test_calibration_threshold.py  test_clob_book_sort_order.py  test_clob_price_extraction.py  test_config_bootstrap_runtime.py  test_execution_quality_gates.py  test_knowledge_affiliates_webhook.py  test_kraken_smart_dca_trade_reports.py  test_market_selection_gates.py  test_no_archived_desktop_issues_repo.py  test_on_invoke_directive.py  test_optimizer_candidates.py  test_paired_basis_maker_imports.py  test_perplexity_fallback.py  test_removed_skill_references.py  test_serendb_publisher_routes.py  test_setup_db_no_hang.py  test_skill_creator_requires_display_name.py  test_skill_creator_uses_h1_display_name.py  test_skill_display_names.py  test_skill_h1_display_names.py  test_sql_param_substitution.py  test_unbuffered_output.py  test_validate_trading_skill_safety.py  (+2 more)
(+1868 files in other folders)
