[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "family-office-base"
version = "0.1.0"
description = "Shared runtime for the family-office skill catalog — canonical object model, audit_query, schema guard, memory, execution primitives."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [
    { name = "Seren Skills Team" },
]
dependencies = [
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "sqlparse>=0.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-postgresql>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["family_office_base"]

[tool.pytest.ini_options]
testpaths = ["tests"]
